// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders currectly items Array item must include id,itemName,status,pokedexId 1`] = `
<div>
  <div
    className="item-container"
  >
    <label
      className="monday-style-checkbox checkbox"
      onClickCapture={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="monday-style-checkbox__input"
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
      >
        <svg
          aria-hidden={true}
          className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
          fill="currentColor"
          height="16"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="16"
        >
          <path
            clipRule="evenodd"
            d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="monday-style-checkbox__label"
      />
    </label>
    <div
      className="clickable task-element"
      onClick={[Function]}
    >
      Take dog out for a walk
      <div
        className="clickable delete-button"
        onClick={[Function]}
      >
        <img
          className="tash-icon"
          src="trash.png"
        />
      </div>
    </div>
  </div>
  <div
    className="item-container"
  >
    <label
      className="monday-style-checkbox checkbox"
      onClickCapture={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="monday-style-checkbox__input"
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
      >
        <svg
          aria-hidden={true}
          className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
          fill="currentColor"
          height="16"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="16"
        >
          <path
            clipRule="evenodd"
            d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="monday-style-checkbox__label"
      />
    </label>
    <div
      className="clickable task-element"
      onClick={[Function]}
    >
      Do the dishes
      <div
        className="clickable delete-button"
        onClick={[Function]}
      >
        <img
          className="tash-icon"
          src="trash.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders currectly items Array item must include id,itemName,status,pokedexId 2`] = `
<div>
  <div
    className="item-container"
  >
    <label
      className="monday-style-checkbox checkbox"
      onClickCapture={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="monday-style-checkbox__input"
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
      >
        <svg
          aria-hidden={true}
          className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
          fill="currentColor"
          height="16"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="16"
        >
          <path
            clipRule="evenodd"
            d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="monday-style-checkbox__label"
      />
    </label>
    <div
      className="clickable task-element"
      onClick={[Function]}
    >
      Do the dishes
      <div
        className="clickable delete-button"
        onClick={[Function]}
      >
        <img
          className="tash-icon"
          src="trash.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders currectly items Array item must include id,itemName,status,pokedexId 3`] = `
<div>
  <div
    className="item-container"
  >
    <label
      className="monday-style-checkbox checkbox"
      onClickCapture={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="monday-style-checkbox__input"
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="monday-style-checkbox__checkbox monday-style-checkbox__prevent-animation"
      >
        <svg
          aria-hidden={true}
          className="icon_component monday-style-checkbox__icon icon_component--no-focus-style"
          fill="currentColor"
          height="16"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="16"
        >
          <path
            clipRule="evenodd"
            d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="monday-style-checkbox__label"
      />
    </label>
    <div
      className="clickable task-element"
      onClick={[Function]}
    >
      Take dog out for a walk
      <div
        className="clickable delete-button"
        onClick={[Function]}
      >
        <img
          className="tash-icon"
          src="trash.png"
        />
      </div>
    </div>
  </div>
</div>
`;
